Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4832

CDB debugger tool setting issue

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • Qt Creator 2.2.1
    • Qt Creator 2.2.0-rc1
    • Debugger
    • None
    • 5a21fba3f24b252635d6b5d1b2cf8fbdb6766cf7

      Reproduction step:
      1. Setting the Microsoft Visual Studio Debugger Tool - CDB as follows:
      /********************************************************************/
      Install the Debugging Tools for Windows on the remote machine. The installation folder contains the CDB
      command line executable (cdb.exe).
      Copy the Qt Creator CDB extension library from the Qt installation directory to the a new folder on the remote machine (32 or 64
      bit version depending on the version of the Debugging Tools for Windows used):
      \lib\qtcreatorcdbext32\qtcreatorcdbext.dll (32 bit)
      \lib\qtcreatorcdbext64\qtcreatorcdbext.dll (64 bit)
      Set the _NT_DEBUGGER_EXTENSION_PATH environment variable to point to that folder.
      To use TCP/IP as communication protocol, launch remote CDB as follows:
      cdb.exe -server tcp:port=1234 <executable>
      On the local machine running Qt Creator, select Debug > Start Debugging > Attach to Remote CDB Session...
      In the Connection field enter the connection parameters. For example, for TCP/IP:
      Server:Port
      If you chose some other protocol, specify one of the alternative formats:

      tcp:server=Server,port=Port[,password=Password][,ipversion=6]
      tcp:clicon=Server,port=Port[,password=Password][,ipversion=6]
      npipe:server=Server,pipe=PipeName[,password=Password]
      com:port=COMPort,baud=BaudRate,channel=COMChannel[,password=Password]
      spipe:proto=Protocol,

      {certuser=Cert|machuser=Cert},server=Server,pipe=PipeName[,password=Password]
      ssl:proto=Protocol,{certuser=Cert|machuser=Cert}

      ,server=Server,port=Socket[,password=Password]
      ssl:proto=Protocol,

      {certuser=Cert|machuser=Cert}

      ,clicon=Server,port=Socket[,password=Password]
      /********************************************************************/
      2. Open the menu item
      Debug->Start Debugging->Attach to Remote CDB Session...
      3. Press OK

      Expercted result:
      CDB tool is set rightly
      Actual result:
      "None of the debugger engines 'Cdb engine, Gdb engine' capable of debugging binaries of the type 'x86-
      Windows-msvc2010-pe-1bit' is configured correctly."

      Comment:
      Detail:
      ---------------------------
      Debugger
      ---------------------------
      None of the debugger engines 'Cdb engine, Gdb engine' capable of debugging binaries of the type 'x86-
      windows-msvc2010-pe-1bit' is configured correctly.
      ---------------------------
      OK Settings... Hide Details...
      ---------------------------
      I want to use the CDB of VS2008 and I set everything OK, but when I use the PushButton - Setting - to
      select the Microsoft Visual C++ Compiler 9.0, when I open the window again, the result is the same.

      I have installed VS2010 and VS2008, but I just installed CDB for Windows XP, qtcreator auto-searches the
      Tools and can't be changed to right one manually.

        1. Debugger.JPG
          30 kB
          Qi Qiang
        2. SettingCDB.JPG
          78 kB
          Qi Qiang
        3. ToolChain.JPG
          106 kB
          Qi Qiang
        4. 0001-Debugger-Fix-remote-CDB-debugging.patch
          1 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qiiiiqia_tieto Qi Qiang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes