Debugger: Fix remote CDB debugging.

Determine ABI correctly.

Reviewed-by: hjk

Task-number: QTCREATORBUG-4832